Fixed text where URLs overflowed container

--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -31,19 +31,29 @@
     margin: 15px 5px 25px 5px;
 }
 
-.PostImage {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 15px 5px 25px 5px;
-}
-
 .PostText p {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: left;
-    margin: 15px 5px 25px 5px;
+    margin: 0px 5px 0px 5px;
     color: black;
+    
+    /* The following styles force URLs to wrap when they exceed their container  */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.PostMiddle {
+    margin: 0px 5px 0px 5px;
 }
 
 .PostRowBottom {
@@ -74,7 +84,7 @@
 .Post img {
     width: auto;
     height: auto;
-    max-width: 50%;
+    max-width: 100%;
     border-radius: 3px;
 }
 
